# github2gitlab

./: .gitignore  AUTHORS  ChangeLog  Dockerfile  MANIFEST.in  Makefile  PKG-INFO  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
github2gitlab/: main.py
tests/: integration.py  setup-gitlab.sh  test_github2gitlab.py
