[metadata]
name = github2gitlab
version = 1.5.5
summary = command line tool to migrate projects from GitHub to GitLab
description-file = 
	README.rst
author = Loic Dachary
author-email = loic@dachary.org
home-page = http://workbench.dachary.org/dachary/github2gitlab
classifier = 
	Environment :: No Input/Output (Daemon)
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	Operating System :: POSIX :: Linux
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Programming Language :: Python
	Programming Language :: Python :: 2.7
	Topic :: Utilities

[files]
scripts = bin/github2gitlab

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

